fixing up the NER